--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -12,8 +12,9 @@
         tools:layout="@layout/fragment_home" />
 
     <fragment
-        android:id="@+id/nav_Nationalize"
-        android:name="com.example.nationalizeapiandroid.ui.gallery.NationalizeFragment"
+        android:id="@+id/nav_nationalize"
+        android:name="com.example.nationalizeapiandroid.ui.nationalize.NationalizeFragment"
         android:label="@string/menu_nationalize"
         tools:layout="@layout/fragment_nationalize" />
+
 </navigation>
